# solver24-mkl

./: .gitignore  CMakeLists.txt  README.md  analysis.py  analysis.sh  job.sh  job_02.sh  job_03.sh  job_06.sh  job_08.sh  job_09.sh  run.sh
include/: mkl_direct_solver.h  mkl_iterative_solver.h
src/: direct_complex.cpp  direct_complex_ilp64.cpp  direct_real.cpp  direct_real_ilp64.cpp  direct_solver.cpp  direct_solver_ilp64.cpp  hybrid_solver.c  hybrid_solver.cpp  iterative_complex.cpp  iterative_real.cpp  iterative_solver.c  iterative_solver.cpp  mmio.h  mmio_highlevel.h  utlise.h  utlise_long.h
test/: analysis.py  generate  generate.c  matrix.mtx  rhs_t0.rhs  rhs_t1.rhs
